--- a/probleme-03/README
+++ b/probleme-03/README
@@ -1,6 +1,6 @@
-Exercice effectué en 1h30.
+Exercice effectué en 2h.
 
 30 minutes de réflexion et de compréhension.
 
-1h de programmation et de tests.
+1h30 de programmation et de tests.
 
